demos/mobile-rendering-performance/examples/position-sticky/good/site/snippets/section-content.php
<div class="content">
    <div class="text"><?php echo markdown($section->text()); ?></div>
</div>
